--- a/Game.cbp
+++ b/Game.cbp
@@ -46,6 +46,10 @@
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="menu.h" />
+		<Unit filename="qa_game.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="qa_game.h" />
 		<Extensions>
 			<code_completion />
 			<envvars />
