Finish QA, Program and Dev Info

--- a/Game.cbp
+++ b/Game.cbp
@@ -50,6 +50,10 @@
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="qa_game.h" />
+		<Unit filename="utility.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="utility.h" />
 		<Extensions>
 			<code_completion />
 			<envvars />
